force-app/main/default/objects/Account/fields/acc__c.field-meta.xml
<CustomField>
    <fullName>acc__c</fullName>
    <label>acc</label>
    <length>200</length>
    <type>Text</type>
</CustomField>