force-app/main/default/objects/Account/fields/account01__c.field-meta.xml
<CustomField>
    <fullName>account01__c</fullName>
    <label>account012</label>
    <length>220</length>
    <type>Text</type>
</CustomField>