force-app/main/default/objects/Account/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <label>action</label>
    <length>215</length>
    <type>Text</type>
</CustomField>