force-app/main/default/objects/Account/fields/client__c.field-meta.xml
<CustomField>
    <fullName>client__c</fullName>
    <label>client</label>
    <length>200</length>
    <type>Text</type>
</CustomField>