force-app/main/default/objects/Account/fields/columns__c.field-meta.xml
<CustomField>
    <fullName>columns__c</fullName>
    <label>columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>