force-app/main/default/objects/Account/fields/delta__c.field-meta.xml
<CustomField>
    <fullName>delta__c</fullName>
    <label>delta</label>
    <length>200</length>
    <type>Text</type>
</CustomField>