force-app/main/default/objects/Account/fields/dreamforce__c.field-meta.xml
<CustomField>
    <fullName>dreamforce__c</fullName>
    <label>dreamforce</label>
    <length>200</length>
    <type>Text</type>
</CustomField>