force-app/main/default/objects/Account/fields/feature01__c.field-meta.xml
<CustomField>
    <fullName>feature01__c</fullName>
    <label>feature01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>