force-app/main/default/objects/Account/fields/feature_search__c.field-meta.xml
<CustomField>
    <fullName>feature_search__c</fullName>
    <label>feature search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>