force-app/main/default/objects/Account/fields/featureQA__c.field-meta.xml
<CustomField>
    <fullName>featureQA__c</fullName>
    <label>featureQA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>