force-app/main/default/objects/Account/fields/identifier__c.field-meta.xml
<CustomField>
    <fullName>identifier__c</fullName>
    <label>identifier</label>
    <length>220</length>
    <type>Text</type>
</CustomField>