force-app/main/default/objects/Account/fields/index_list__c.field-meta.xml
<CustomField>
    <fullName>index_list__c</fullName>
    <label>index list</label>
    <length>220</length>
    <type>Text</type>
</CustomField>