force-app/main/default/objects/Account/fields/layouts__c.field-meta.xml
<CustomField>
    <fullName>layouts__c</fullName>
    <label>layouts</label>
    <length>220</length>
    <type>Text</type>
</CustomField>