force-app/main/default/objects/Account/fields/manager__c.field-meta.xml
<CustomField>
    <fullName>manager__c</fullName>
    <label>manager</label>
    <length>210</length>
    <type>Text</type>
</CustomField>