force-app/main/default/objects/Account/fields/maximum__c.field-meta.xml
<CustomField>
    <fullName>maximum__c</fullName>
    <label>maximum</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>