force-app/main/default/objects/Account/fields/orgfarm__c.field-meta.xml
<CustomField>
    <fullName>orgfarm__c</fullName>
    <label>orgfarm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>