force-app/main/default/objects/Account/fields/pipelinetest__c.field-meta.xml
<CustomField>
    <fullName>pipelinetest__c</fullName>
    <label>pipelinetest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>