force-app/main/default/objects/Account/fields/record__c.field-meta.xml
<CustomField>
    <fullName>record__c</fullName>
    <label>record</label>
    <length>200</length>
    <type>Text</type>
</CustomField>