force-app/main/default/objects/Account/fields/salesforce__c.field-meta.xml
<CustomField>
    <fullName>salesforce__c</fullName>
    <label>salesforce</label>
    <length>215</length>
    <type>Text</type>
</CustomField>