force-app/main/default/objects/Account/fields/salesforceobject__c.field-meta.xml
<CustomField>
    <fullName>salesforceobject__c</fullName>
    <label>salesforceobject</label>
    <length>220</length>
    <type>Text</type>
</CustomField>